<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragments.MainFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="160dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:padding="10dp"
        android:text="@string/text_your_date_birth"
        android:textColor="#228E3A"
        app:layout_constraintBottom_toTopOf="@+id/start_mess"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196" />

    <EditText
        android:id="@+id/editViewDate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@drawable/border"
        android:clickable="false"
        android:cursorVisible="false"
        android:drawableEnd="@drawable/calendar"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/date_default_format"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.411" />

    <TextView
        android:id="@+id/start_mess"
        style="@style/customText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_mess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241"


        />

    <ImageView
        android:id="@+id/imageViewStart"
        android:layout_width="330dp"
        android:layout_height="436dp"
        android:layout_margin="16dp"
        android:src="@drawable/welcome_picture"
        app:layout_constraintBottom_toTopOf="@+id/btnStart"
        app:layout_constraintEnd_toEndOf="@+id/start_mess"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/start_mess"
        app:layout_constraintTop_toBottomOf="@+id/start_mess"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnStart"
        style="@style/MyButtonStyle"
        android:text="@string/btnStart_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>