<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.skillbox_hw_quiz.ui.main.fragments.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/main_fragment">
        <action
            android:id="@+id/action_mainFragment_to_quizFragment"
            app:destination="@id/quizFragment"

            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:launchSingleTop="false"
            app:popEnterAnim="@anim/enter_from_left"

            app:popExitAnim="@anim/exit_to_right"
            app:popUpTo="@id/quizFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/quizFragment"
        android:name="com.example.skillbox_hw_quiz.ui.main.fragments.QuizFragment"
        android:label="@string/fragment_quiz_name"
        tools:layout="@layout/quiz_fragment">
        <action
            android:id="@+id/action_quizFragment_to_resultFragment"
            app:destination="@id/resultFragment"

            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/enter_from_left"

            app:popExitAnim="@anim/exit_to_right"
            app:popUpTo="@id/quizFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_quizFragment_to_mainFragment"
            app:destination="@id/mainFragment"

            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:popEnterAnim="@anim/enter_from_left"

            app:popExitAnim="@anim/exit_to_right"
            app:popUpTo="@id/mainFragment"
            app:popUpToInclusive="true" />

    </fragment>
    <fragment
        android:id="@+id/resultFragment"
        android:name="com.example.skillbox_hw_quiz.ui.main.fragments.ResultFragment"
        android:label="@string/fragment_results_name"
        tools:layout="@layout/result_fragment">
        <action
            android:id="@+id/action_resultFragment_to_quizFragment"
            app:destination="@id/quizFragment"

            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:popEnterAnim="@anim/enter_from_left"
            app:popExitAnim="@anim/exit_to_right"

            app:popUpTo="@id/quizFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>